nginx-with-ingress/2-webapp-hello-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-hello-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp-hello-v2
  template:
    metadata:
      labels:
        app: webapp-hello-v2
    spec:
      containers:
      - name: webapp-hello
        image: gcr.io/google-samples/hello-app:2.0
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
